Fix hero wrapping and tweak rotating text speed

--- a/src/pages/main/css/hero.css
+++ b/src/pages/main/css/hero.css
@@ -24,18 +24,22 @@
 }
 
 .eyes-on-container {
+    width: clamp(290px, 26vw, 500px);
     clear: both;
     float: right;
+    @media (width <= 1000px) {
+        float: none !important;
+    }
 }
 
 .eyes-on-img {
-    width: clamp(280px, 26vw, 500px);
+    width: clamp(290px, 26vw, 500px);
     /* filter: drop-shadow(1px 1px 0px black); */
     margin-right: 30px;
     opacity: 1;
     padding-top: 10px;
-
+    /* 
     @media (width <= 500) {
         filter: none;
-    }
+    } */
 }
